# yap

./: .gitignore  Cargo.toml  README.md  install.sh  main.py  pyproject.toml
.github/workflows/: release.yml
extras/raycast/: yap.sh
src/: assets.rs  cancel.rs  chunk.rs  clipboard.rs  main.rs  play.rs  save.rs  spinner.rs  synth.rs  update.rs
