[package]
name = "yap"
version = "0.1.2"
edition = "2024"
description = "pbpaste, but it talks. Speak macOS clipboard text with Kokoro TTS."
license = "GPL-3.0-or-later"

[dependencies]
kokoros = { git = "https://github.com/lucasjinreal/Kokoros.git" }
clap = { version = "4", features = ["derive"] }
arboard = "3"
rodio = { version = "0.20", default-features = false }
crossbeam-channel = "0.5"
ctrlc = "3"
anyhow = "1"
tokio = { version = "1", features = ["rt", "macros"] }
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
indicatif = "0.17"
tar = "0.4"
flate2 = "1"
hound = "3.5"
mp3lame-encoder = "0.2"

[profile.release]
lto = "thin"
strip = "symbols"
